--- a/gallery.html
+++ b/gallery.html
@@ -3,119 +3,266 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Madrasa Photo Gallery</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <title>Noorussalam Madrasa — Photo Gallery</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: "Inter", sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    header {
+      background: linear-gradient(90deg, #0b5ed7, #2b9ed7);
+    }
+
+    .gallery-item img {
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      cursor: pointer;
+    }
+
+    .gallery-item:hover img {
+      transform: scale(1.05);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    footer {
+      background: #0b5ed7;
+    }
+
+    .btn-outline-primary {
+      border-color: #0b5ed7;
+      color: #0b5ed7;
+      border-radius: 25px;
+      transition: all 0.3s ease;
+    }
+
+    .btn-outline-primary:hover {
+      background: #0b5ed7;
+      color: white;
+    }
+
+    /* Lightbox */
+    #lightbox {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.9);
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+
+    #lightbox img {
+      max-width: 90%;
+      max-height: 80%;
+      border-radius: 10px;
+      box-shadow: 0 0 25px rgba(255,255,255,0.2);
+      transition: opacity 0.4s ease;
+    }
+
+    #caption {
+      color: white;
+      margin-top: 15px;
+      font-size: 1rem;
+      opacity: 0.85;
+      text-align: center;
+    }
+
+    #lightbox .controls {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+      padding: 0 30px;
+    }
+
+    #lightbox button {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 2rem;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    #lightbox button:hover {
+      color: #0b5ed7;
+    }
+
+    #closeBtn {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 2rem;
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    #closeBtn:hover {
+      color: #0b5ed7;
+    }
+
+    @media (max-width: 576px) {
+      header h2 { font-size: 1.4rem; }
+      header p { font-size: 0.9rem; }
+    }
+  </style>
 </head>
 <body>
 
   <!-- HEADER -->
-  <header class="bg-primary text-white text-center py-4 shadow-sm">
-    <h2 class="mb-0">Madrasa Photo Gallery</h2>
-    <p class="mb-0">Beautiful moments from our campus life</p>
+  <header class="text-white text-center py-4 shadow-sm">
+    <h2>Noorussalam Madrasa — Photo Gallery</h2>
+    <p>Memorable moments from our campus life</p>
   </header>
 
-  <!-- GALLERY SECTION -->
+  <!-- GALLERY -->
   <section id="gallery" class="py-5">
     <div class="container">
       <div class="row g-3">
-        <!-- Gallery Image 1 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg" alt="Event 1" class="img-fluid rounded shadow-sm">
-          </a>
+
+        <!-- Gallery Images with captions -->
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg" alt="Annual Function" class="img-fluid rounded shadow-sm" data-caption="Annual Function Celebration 2025">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/whNzN51r/Whats-App-Image-2025-10-28-at-3-43-48-PM.jpg" alt="Classroom" class="img-fluid rounded shadow-sm" data-caption="Interactive Classroom Session">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/k6h2j78B/Whats-App-Image-2025-10-28-at-3-42-31-PM.jpg" alt="Prize Distribution" class="img-fluid rounded shadow-sm" data-caption="Annual Prize Distribution">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/yFJ24kWv/Whats-App-Image-2025-10-28-at-3-41-14-PM.jpg" alt="Sports Day" class="img-fluid rounded shadow-sm" data-caption="Sports Day Celebration">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/S4MY80MX/Whats-App-Image-2025-10-28-at-3-41-08-PM.jpg" alt="Morning Assembly" class="img-fluid rounded shadow-sm" data-caption="Morning Assembly at Campus">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" alt="Students Reading" class="img-fluid rounded shadow-sm" data-caption="Students Reading in Library">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/qYwwbXWh/Whats-App-Image-2025-10-28-at-3-40-42-PM.jpg" alt="Cultural Event" class="img-fluid rounded shadow-sm" data-caption="Cultural Day Program">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/hJvfZp4b/Whats-App-Image-2025-10-28-at-3-39-08-PM.jpg" alt="Group Photo" class="img-fluid rounded shadow-sm" data-caption="Group Photo — Senior Students">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/Kcb61F1f/Whats-App-Image-2025-10-28-at-3-38-43-PM.jpg" alt="Quran Recitation" class="img-fluid rounded shadow-sm" data-caption="Qur’an Recitation Competition">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/s9HQzNd3/Whats-App-Image-2025-10-28-at-3-38-36-PM.jpg" alt="Science Fair" class="img-fluid rounded shadow-sm" data-caption="Science Fair Presentation">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/mrCZd07k/Whats-App-Image-2025-10-28-at-3-37-52-PM.jpg" alt="Library" class="img-fluid rounded shadow-sm" data-caption="Students in the Library">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" alt="Farewell" class="img-fluid rounded shadow-sm" data-caption="Farewell Ceremony — Class 12">
         </div>
 
-        <!-- Gallery Image 2 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/whNzN51r/Whats-App-Image-2025-10-28-at-3-43-48-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/whNzN51r/Whats-App-Image-2025-10-28-at-3-43-48-PM.jpg" alt="Event 2" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-
-        <!-- Gallery Image 3 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/k6h2j78B/Whats-App-Image-2025-10-28-at-3-42-31-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/k6h2j78B/Whats-App-Image-2025-10-28-at-3-42-31-PM.jpg" alt="Classroom" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-
-        <!-- Gallery Image 4 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/yFJ24kWv/Whats-App-Image-2025-10-28-at-3-41-14-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/yFJ24kWv/Whats-App-Image-2025-10-28-at-3-41-14-PM.jpg" alt="Event 3" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-
-        <!-- Gallery Image 5 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/S4MY80MX/Whats-App-Image-2025-10-28-at-3-41-08-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/S4MY80MX/Whats-App-Image-2025-10-28-at-3-41-08-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-        
-        <!-- Gallery Image 6 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-
-        <!-- Gallery Image 7 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/qYwwbXWh/Whats-App-Image-2025-10-28-at-3-40-42-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/qYwwbXWh/Whats-App-Image-2025-10-28-at-3-40-42-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-
-        <!-- Gallery Image 8 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/hJvfZp4b/Whats-App-Image-2025-10-28-at-3-39-08-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/hJvfZp4b/Whats-App-Image-2025-10-28-at-3-39-08-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-
-        <!-- Gallery Image 9 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/Kcb61F1f/Whats-App-Image-2025-10-28-at-3-38-43-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/Kcb61F1f/Whats-App-Image-2025-10-28-at-3-38-43-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-
-        <!-- Gallery Image 10 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/s9HQzNd3/Whats-App-Image-2025-10-28-at-3-38-36-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/s9HQzNd3/Whats-App-Image-2025-10-28-at-3-38-36-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-
-        <!-- Gallery Image 11 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/mrCZd07k/Whats-App-Image-2025-10-28-at-3-37-52-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/mrCZd07k/Whats-App-Image-2025-10-28-at-3-37-52-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
-        
-        <!-- Gallery Image 12 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" alt="Library" class="img-fluid rounded shadow-sm">
-          </a>
-        </div>
       </div>
 
-      <!-- BACK TO HOME -->
+      <!-- Back to Home -->
       <div class="text-center mt-5">
         <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
       </div>
     </div>
   </section>
 
-  <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3 mt-4">
-    <small>© 2025 All rights reserved. |Noorussalam Madrasa</small>
-</footer>
+  <!-- LIGHTBOX -->
+  <div id="lightbox">
+    <span id="closeBtn">&times;</span>
+    <div class="controls">
+      <button id="prevBtn">❮</button>
+      <button id="nextBtn">❯</button>
+    </div>
+    <img id="lightboxImage" src="" alt="Gallery Image">
+    <div id="caption"></div>
+  </div>
 
+  <!-- FOOTER -->
+  <footer class="text-white text-center py-3 mt-4">
+    <small>© 2025 Noorussalam Madrasa. All rights reserved.</small>
+  </footer>
+
+  <script>
+    const images = document.querySelectorAll('.gallery-item img');
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImage = document.getElementById('lightboxImage');
+    const caption = document.getElementById('caption');
+    const closeBtn = document.getElementById('closeBtn');
+    const nextBtn = document.getElementById('nextBtn');
+    const prevBtn = document.getElementById('prevBtn');
+    let currentIndex = 0;
+    let autoSlide;
+
+    images.forEach((img, index) => {
+      img.addEventListener('click', () => {
+        currentIndex = index;
+        showImage();
+      });
+    });
+
+    function showImage() {
+      const img = images[currentIndex];
+      lightbox.style.display = 'flex';
+      lightboxImage.style.opacity = 0;
+      setTimeout(() => {
+        lightboxImage.src = img.src;
+        caption.innerText = img.getAttribute('data-caption') || "";
+        lightboxImage.style.opacity = 1;
+      }, 100);
+      startAutoSlide();
+    }
+
+    function nextImage() {
+      currentIndex = (currentIndex + 1) % images.length;
+      showImage();
+    }
+
+    function prevImage() {
+      currentIndex = (currentIndex - 1 + images.length) % images.length;
+      showImage();
+    }
+
+    nextBtn.addEventListener('click', () => {
+      nextImage();
+      stopAutoSlide();
+    });
+
+    prevBtn.addEventListener('click', () => {
+      prevImage();
+      stopAutoSlide();
+    });
+
+    closeBtn.addEventListener('click', () => {
+      lightbox.style.display = 'none';
+      stopAutoSlide();
+    });
+
+    lightbox.addEventListener('click', (e) => {
+      if (e.target === lightbox) {
+        lightbox.style.display = 'none';
+        stopAutoSlide();
+      }
+    });
+
+    // Auto slideshow
+    function startAutoSlide() {
+      stopAutoSlide();
+      autoSlide = setInterval(nextImage, 4000);
+    }
+
+    function stopAutoSlide() {
+      clearInterval(autoSlide);
+    }
+  </script>
 </body>
 </html>
 
