--- a/login.html
+++ b/login.html
@@ -5,219 +5,327 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Noorussalam Madrasa — Login</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
   <style>
     :root{
       --accent:#0b5ea8;
-      --accent-alt:#03a87c;
-      --bg-dark:#0e2438;
-      --bg-light:#f7faff;
-      --text-dark:#0e2438;
-      --text-light:#ffffff
+      --accent2:#0bb89f;
+      --error:#ef4444;
+      --success:#22c55e;
+      --bg:#0d1b2a;
+      --light-bg:#f8fafc;
+      --text:#e2e8f0;
+      --text-dark:#334155;
     }
-    *{box-sizing:border-box;transition:all .3s ease-in-out}
-    html,body{height:100%;margin:0;padding:0}
+    *{box-sizing:border-box;transition:.3s all ease;}
+
     body{
-      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
-      background:var(--bg-dark);
-      color:var(--text-light);
+      margin:0;
+      font-family:Poppins, sans-serif;
+      background:var(--bg);
+      color:var(--text);
+      height:100vh;
       display:flex;
       align-items:center;
       justify-content:center;
-      flex-direction:column;
       padding:20px;
-      animation:fadeIn 0.8s ease-in;
-    }
-    @keyframes fadeIn{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
-    .bg-shapes{position:fixed;inset:0;pointer-events:none;z-index:0;overflow:hidden}
-    .shape{position:absolute;border-radius:50%;filter:blur(60px);opacity:0.4;animation:float 10s ease-in-out infinite}
-    .shape.s1{width:380px;height:380px;left:-80px;top:10%;background:linear-gradient(45deg,var(--accent),var(--accent-alt))}
-    .shape.s2{width:280px;height:280px;right:-60px;bottom:5%;background:linear-gradient(135deg,#a24ff0,var(--accent));animation-duration:12s}
-    @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-24px)}}
-    .container{
-      width:100%;
-      max-width:480px;
-      z-index:1;
-      background:rgba(255,255,255,0.05);
-      backdrop-filter:blur(10px);
-      border-radius:20px;
-      padding:24px;
-      box-shadow:0 8px 24px rgba(0,0,0,0.4);
-      position:relative;
       overflow:hidden;
     }
-    .toggle-mode{position:absolute;top:14px;right:14px;cursor:pointer;background:transparent;border:none;color:inherit;font-size:20px;opacity:0.9}
-    .logo{text-align:center;margin-bottom:20px;margin-top:12px}
-    .logo .mark{width:64px;height:64px;margin:auto;border-radius:14px;background:linear-gradient(135deg,var(--accent),var(--accent-alt));display:flex;align-items:center;justify-content:center;color:white;font-weight:700;box-shadow:0 6px 18px rgba(11,94,168,0.25);font-size:20px}
-    .logo h1{margin:10px 0 0;font-size:20px}
-    .logo p{font-size:14px;opacity:0.85;margin:4px 0 20px}
-    form{display:flex;flex-direction:column;gap:14px}
-    .field{position:relative}
-    input[type=text],input[type=password]{
+
+    /* BG ANIMATION */
+    .bg-dots{
+      position:fixed;
+      inset:0;
+      background:url('https://i.imgur.com/jxWqIBf.png');
+      opacity:.22;
+      z-index:-2;
+    }
+    .circle{
+      position:fixed;
+      width:420px;
+      height:420px;
+      background:radial-gradient(circle at 30% 30%, var(--accent), transparent);
+      top:-120px;
+      left:-120px;
+      filter:blur(80px);
+      z-index:-1;
+      animation:float 6s ease-in-out infinite;
+      opacity:.7;
+    }
+    .circle2{
+      position:fixed;
+      width:380px;
+      height:380px;
+      background:radial-gradient(circle at 70% 70%, var(--accent2), transparent);
+      bottom:-120px;
+      right:-120px;
+      filter:blur(90px);
+      z-index:-1;
+      animation:float2 7s ease-in-out infinite;
+      opacity:.7;
+    }
+    @keyframes float{
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-26px)}
+    }
+    @keyframes float2{
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(30px)}
+    }
+
+    /* LOGIN CARD */
+    .card{
+      width:100%;
+      max-width:430px;
+      padding:32px;
+      border-radius:22px;
+      backdrop-filter:blur(16px);
+      background:rgba(255,255,255,0.05);
+      box-shadow:0 12px 40px rgba(0,0,0,0.45);
+      border:1px solid rgba(255,255,255,0.1);
+      position:relative;
+    }
+
+    /* GLOWING BORDER */
+    .card:before{
+      content:'';
+      position:absolute;
+      inset:-2px;
+      border-radius:24px;
+      background:linear-gradient(135deg,var(--accent),var(--accent2));
+      z-index:-1;
+      filter:blur(16px);
+      opacity:.35;
+    }
+
+    .logo{
+      text-align:center;
+      margin-bottom:18px;
+    }
+    .logo .icon{
+      width:62px;height:62px;
+      margin:auto;
+      border-radius:14px;
+      background:linear-gradient(135deg,var(--accent),var(--accent2));
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      color:#fff;
+      font-weight:700;
+      font-size:22px;
+      box-shadow:0 6px 20px rgba(0,0,0,0.35);
+      animation:pop 0.7s ease;
+    }
+    @keyframes pop{
+      0%{transform:scale(0.5);opacity:0}
+      100%{transform:scale(1);opacity:1}
+    }
+
+    h1{text-align:center;font-size:22px;margin:10px 0 4px;}
+    p{text-align:center;font-size:13px;opacity:.8;margin-bottom:22px;}
+
+    .field{position:relative;margin-bottom:18px;}
+    input{
       width:100%;
       padding:14px 44px 14px 14px;
+      background:rgba(255,255,255,0.07);
+      border:1px solid rgba(255,255,255,0.15);
       border-radius:12px;
-      border:1px solid rgba(255,255,255,0.1);
-      background:transparent;
-      color:inherit;
-      font-size:15px;
+      font-size:14px;
+      color:var(--text);
       outline:none;
-      backdrop-filter:blur(6px);
     }
-    input:focus{border-color:var(--accent-alt)}
-    label.floating{position:absolute;left:14px;top:12px;pointer-events:none;font-size:13px;color:rgba(255,255,255,0.7);transition:transform .14s ease, font-size .14s, top .14s}
-    input:not(:placeholder-shown)+label.floating,input:focus+label.floating{transform:translateY(-10px);font-size:12px;top:6px;color:#fff}
-    .icon{position:absolute;right:12px;top:50%;transform:translateY(-50%);opacity:0.9}
-    .btn{padding:12px 16px;border-radius:12px;border:none;background:linear-gradient(90deg,var(--accent),var(--accent-alt));color:white;font-weight:600;cursor:pointer;width:100%;}
-    .btn:active{transform:translateY(1px)}
-    .row{display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;font-size:13px}
-    .checkbox{display:flex;align-items:center;gap:6px}
-    .alt{margin-top:16px;text-align:center;font-size:13px;color:rgba(255,255,255,0.8)}
-    .alt a{color:var(--accent-alt);text-decoration:none;font-weight:600}
-    footer.small{text-align:center;margin-top:12px;font-size:12px;color:rgba(255,255,255,0.6)}
+    input:focus{
+      border-color:var(--accent2);
+      background:rgba(255,255,255,0.12);
+    }
 
-    /* BACK TO HOME button */
-    .back-home{
-      display:inline-block;
-      margin-top:18px;
-      padding:10px 20px;
-      background:linear-gradient(90deg,var(--accent-alt),var(--accent));
+    label{
+      position:absolute;
+      left:14px;
+      top:12px;
+      font-size:13px;
+      color:#cbd5e1;
+      pointer-events:none;
+      transition:.2s;
+    }
+    input:focus + label,
+    input:not(:placeholder-shown)+label{
+      top:-8px;
+      font-size:11px;
+      background:rgba(0,0,0,0.4);
+      padding:0 6px;
+      border-radius:8px;
       color:#fff;
+    }
+
+    .icon{
+      position:absolute;
+      right:14px;
+      top:50%;
+      transform:translateY(-50%);
+      font-size:18px;
+      opacity:.8;
+      cursor:pointer;
+    }
+
+    /* BUTTON */
+    button{
+      width:100%;
+      padding:14px;
+      border:none;
+      border-radius:12px;
+      background:linear-gradient(135deg,var(--accent),var(--accent2));
+      color:white;
+      font-weight:600;
+      cursor:pointer;
+      font-size:15px;
+      margin-top:4px;
+    }
+
+    .alt{
+      margin-top:18px;
+      text-align:center;
+      font-size:13px;
+    }
+    .alt a{color:#38bdf8;text-decoration:none;font-weight:600;}
+
+    .home-btn{
+      margin-top:16px;
+      padding:12px;
+      display:block;
+      background:linear-gradient(135deg,var(--accent2),var(--accent));
+      color:white;
+      text-align:center;
+      border-radius:12px;
       text-decoration:none;
       font-weight:600;
-      border-radius:12px;
-      text-align:center;
-      width:100%;
     }
-    .back-home:hover{opacity:0.9;transform:translateY(-2px)}
-    
-    @media(max-width:600px){
-      body{padding:16px;}
-      .container{padding:20px;}
-      input[type=text],input[type=password]{font-size:14px;}
-    }
-    body.light{background:var(--bg-light);color:var(--text-dark)}
-    body.light .container{background:rgba(0,0,0,0.04);color:var(--text-dark)}
-    body.light input{color:var(--text-dark);border-color:rgba(0,0,0,0.1)}
-    body.light .btn{color:#fff}
+
+    /* Light Mode */
+    body.light{background:var(--light-bg);color:var(--text-dark);}
+    body.light .card{background:rgba(0,0,0,0.06);border-color:rgba(0,0,0,0.1);}
+    body.light input{background:rgba(0,0,0,0.04);color:var(--text-dark);}
   </style>
 </head>
-<body>
-  <div class="bg-shapes">
-    <div class="shape s1"></div>
-    <div class="shape s2"></div>
-  </div>
 
-  <div class="container">
-    <button class="toggle-mode" id="toggleMode" title="Toggle light/dark mode"><i class='bx bx-sun'></i></button>
+<body>
+  <div class="bg-dots"></div>
+  <div class="circle"></div>
+  <div class="circle2"></div>
+
+  <div class="card">
+    <button id="toggleMode" style="position:absolute;top:14px;right:14px;background:none;border:none;color:white;font-size:20px;cursor:pointer;">
+      <i class='bx bx-sun'></i>
+    </button>
 
     <div class="logo">
-      <div class="mark">NS</div>
+      <div class="icon">NS</div>
       <h1>Noorussalam Madrasa</h1>
-      <p>Kambippalam — Student Portal</p>
+      <p>Student Portal Login</p>
     </div>
 
     <form id="loginForm">
       <div class="field">
-        <input id="user" name="user" type="text" placeholder=" " required>
-        <label class="floating" for="user">Madrasa ID or Email</label>
-        <span class="icon"><i class='bx bx-user'></i></span>
+        <input type="text" id="user" placeholder=" " required>
+        <label>Madrasa ID or Email</label>
+        <i class='bx bx-user icon'></i>
       </div>
 
       <div class="field">
-        <input id="password" name="password" type="password" placeholder=" " required>
-        <label class="floating" for="password">Password</label>
-        <span class="icon password-toggle" id="togglePwd"><i class='bx bx-hide'></i></span>
+        <input type="password" id="password" placeholder=" " required>
+        <label>Password</label>
+        <i class='bx bx-hide icon' id="togglePwd"></i>
       </div>
 
-      <div class="row">
-        <label class="checkbox"><input id="remember" type="checkbox"> Remember me</label>
-        <a href="#" style="color:var(--accent-alt);text-decoration:none">Forgot?</a>
+      <button type="submit" id="loginBtn"><i class='bx bxs-lock-alt'></i> Sign In</button>
+
+      <div class="alt">Don't have an account?
+        <a href="register.html">Register</a>
       </div>
 
-      <button type="submit" class="btn"><i class='bx bxs-lock-alt'></i> Sign In</button>
-
-      <div class="alt">Don't have an account? <a href="register.html">Register</a></div>
-
-      <!-- BACK TO HOME BUTTON -->
-      <a href="index.html" class="back-home"><i class='bx bx-home'></i> Back to Home</a>
-
-      <footer class="small">© Noorussalam Madrasa <span id="yr"></span></footer>
+      <a href="index.html" class="home-btn"><i class='bx bx-home'></i> Back to Home</a>
     </form>
   </div>
 
   <script>
-    document.getElementById('yr').textContent = new Date().getFullYear();
+    const yr = new Date().getFullYear();
 
-    const pwd=document.getElementById('password');
-    const toggle=document.getElementById('togglePwd');
-    toggle.addEventListener('click',()=>{
-      const icon=toggle.querySelector('i');
-      if(pwd.type==='password'){pwd.type='text';icon.className='bx bx-show';}
-      else{pwd.type='password';icon.className='bx bx-hide';}
-    });
+    // Toggle password visibility
+    const pwd = document.getElementById('password');
+    const togglePwd = document.getElementById('togglePwd');
 
-    const toggleMode=document.getElementById('toggleMode');
-    toggleMode.addEventListener('click',()=>{
-      document.body.classList.toggle('light');
-      const icon=toggleMode.querySelector('i');
-      if(document.body.classList.contains('light')) icon.className='bx bx-moon';
-      else icon.className='bx bx-sun';
-    });
+    togglePwd.onclick = () => {
+      pwd.type = (pwd.type === "password") ? "text" : "password";
+      togglePwd.className = (pwd.type === "password") ? "bx bx-hide icon" : "bx bx-show icon";
+    };
 
-    // === LOGIN logic ===
-    const scriptURL = "https://script.google.com/macros/s/AKfycbwZB8o9K_C5BDQkHouXx9z8o1Roeq28ByO-qZPImeC9hdtQRkS5mBpSMQJXsLkLB709/exec"; // replace if needed
-    const form=document.getElementById('loginForm');
+    // Light/Dark mode
+    const toggleMode = document.getElementById('toggleMode');
+    toggleMode.onclick = () => {
+      document.body.classList.toggle("light");
+      toggleMode.innerHTML =
+        document.body.classList.contains("light")
+        ? "<i class='bx bx-moon'></i>"
+        : "<i class='bx bx-sun'></i>";
+    };
 
-    form.addEventListener('submit', async e => {
+    // LOGIN HANDLER
+    const scriptURL = "YOUR_GOOGLE_APP_SCRIPT_URL"; // REPLACE
+    const form = document.getElementById('loginForm');
+    const btn = document.getElementById('loginBtn');
+
+    form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const user = document.getElementById('user').value.trim();
-      const password = document.getElementById('password').value.trim();
-      const remember = document.getElementById('remember').checked;
-      const btn=form.querySelector('.btn');
+      btn.disabled = true;
+      btn.innerHTML = "<i class='bx bx-loader-circle bx-spin'></i> Checking...";
 
-      btn.disabled=true;
-      btn.innerHTML='<i class="bx bx-loader-circle bx-spin"></i> Signing in...';
+      const user = document.getElementById("user").value.trim();
+      const password = document.getElementById("password").value.trim();
 
       try {
         const res = await fetch(scriptURL, {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ action:"login", username: user, password: password })
+          headers: {"Content-Type":"application/json"},
+          body: JSON.stringify({
+            action: "login",
+            username: user,
+            password: password
+          })
         });
-        const result = await res.json();
 
-        if (result.success) {
-          localStorage.setItem("username", result.username || user);
-          localStorage.setItem("role", result.role || "student");
-          if(result.fullname) localStorage.setItem("fullname", result.fullname);
-          if(result.class) localStorage.setItem("class", result.class);
-          if(result.admission) localStorage.setItem("admission", result.admission);
+        const data = await res.json();
 
-          btn.innerHTML='<i class="bx bxs-check-circle"></i> Success!';
-          btn.style.background='linear-gradient(90deg,#22c55e,#06b6d4)';
-          setTimeout(()=>{
-            if(result.role==="admin") window.location.href="admin-dashboard.html";
-            else window.location.href="student-dashboard.html";
-          },900);
+        if (data.success) {
+          btn.innerHTML = "<i class='bx bxs-check-circle'></i> Success!";
+          btn.style.background = "linear-gradient(135deg,#22c55e,#06b6d4)";
+
+          localStorage.setItem("username", data.username);
+          localStorage.setItem("role", data.role);
+
+          setTimeout(() => {
+            if(data.role === "admin") window.location.href = "admin-dashboard.html";
+            else window.location.href = "student-dashboard.html";
+          }, 900);
+
         } else {
-          btn.disabled=false;
-          btn.innerHTML='<i class="bx bx-error-circle"></i> Invalid Login';
-          btn.style.background='linear-gradient(90deg,#ef4444,#dc2626)';
-          setTimeout(()=>{
-            btn.innerHTML='<i class="bx bxs-lock-alt"></i> Sign In';
-            btn.style.background='linear-gradient(90deg,#0b5ea8,#03a87c)';
-          },1400);
+          btn.disabled = false;
+          btn.innerHTML = "<i class='bx bx-error-circle'></i> Invalid Login";
+          btn.style.background = "linear-gradient(135deg,#ef4444,#dc2626)";
+          setTimeout(() => {
+            btn.style.background = "linear-gradient(135deg,var(--accent),var(--accent2))";
+            btn.innerHTML = "<i class='bx bxs-lock-alt'></i> Sign In";
+          }, 1500);
         }
-      } catch(err) {
-        console.error(err);
-        btn.disabled=false;
-        btn.innerHTML='<i class="bx bx-error"></i> Error';
-        setTimeout(()=>{
-          btn.innerHTML='<i class="bx bxs-lock-alt"></i> Sign In';
-          btn.style.background='linear-gradient(90deg,#0b5ea8,#03a87c)';
-        },1400);
+
+      } catch (err) {
+        btn.disabled = false;
+        btn.innerHTML = "<i class='bx bx-error'></i> Error";
+        setTimeout(() => {
+          btn.innerHTML = "<i class='bx bxs-lock-alt'></i> Sign In";
+        }, 1500);
       }
     });
   </script>
